--- a/comics-project-data-collection.ipynb
+++ b/comics-project-data-collection.ipynb
@@ -20,8 +20,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d2040a97-e233-4920-a93c-ed6a17cce5bc",
+   "metadata": {},
+   "source": [
+    "## Data collection - download all of the publishers links from the comicsdb.cz"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "2f3bf23f-5445-49bc-94b1-54a45ce6349c",
    "metadata": {
     "scrolled": true
