Scraping a publisher detail.

--- a/comics-project-data-collection.ipynb
+++ b/comics-project-data-collection.ipynb
@@ -21,10 +21,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2040a97-e233-4920-a93c-ed6a17cce5bc",
+   "id": "2a81b5cf-2d0a-42ce-906d-f9bb30464b08",
    "metadata": {},
    "source": [
-    "## Data collection - download all of the publishers links from the comicsdb.cz"
+    "### Data collection - download all of the publishers links from the comicsdb.cz and export them to a .csv file"
    ]
   },
   {
@@ -54,6 +54,7 @@
     "    for num in list(range(1,8)):\n",
     "        driver.get(f'{nakladatelstvi}{num}')    \n",
     "        driver.implicitly_wait(1)\n",
+    "        # wait for the element\n",
     "        element = WebDriverWait(driver, 5).until(\n",
     "            EC.presence_of_element_located((By.CSS_SELECTOR, \".card.text-center.p-2\")))\n",
     "        links = driver.find_element(by = By.CSS_SELECTOR, value = \".table-border-dashed\").find_elements(by = By.TAG_NAME, value = \"a\")\n",
@@ -62,10 +63,58 @@
     "finally:\n",
     "    driver.quit()\n",
     "\n",
-    "filename = \"output.csv\"\n",
+    "filename = \"./data/links_publishers.csv\"\n",
     "with open(filename, \"w\", newline=\"\") as csvfile:\n",
     "    csvwriter = csv.writer(csvfile)\n",
     "    csvwriter.writerows(list_of_links)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b53d8aba-2425-4e97-8e24-e55813a9d8a5",
+   "metadata": {},
+   "source": [
+    "### Visit each webpage of publishers from source .csv file and get number of titles and the list of titles."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "a2b356d2-830f-4f3e-a098-6c9d6f3cf540",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.edge.service import Service\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.support.ui import WebDriverWait\n",
+    "from selenium.webdriver.support import expected_conditions as EC\n",
+    "\n",
+    "DRIVER_PATH = \"C:\\\\Users\\\\petr.musil\\\\Desktop\\\\python\\\\edgedriver\\\\msedgedriver.exe\"\n",
+    "service = Service(executable_path = DRIVER_PATH)\n",
+    "driver = webdriver.Edge(service=service)\n",
+    "\n",
+    "try:\n",
+    "    list_of_publisher_data = []\n",
+    "    with open(\"./data/links_publishers.csv\", \"r\") as file:\n",
+    "        reader = csv.reader(file)\n",
+    "        for row in reader:\n",
+    "            driver.get(row[0])\n",
+    "            driver.implicitly_wait(1)\n",
+    "            publisher = WebDriverWait(driver, 5).until(\n",
+    "                EC.presence_of_element_located((By.CSS_SELECTOR, \".font-weight-semibold\")))\n",
+    "            number_of_titles = WebDriverWait(driver, 5).until(\n",
+    "                EC.presence_of_element_located((By.CSS_SELECTOR, \".font-weight-bold.text-cdbred.ml-1\")))\n",
+    "            list_of_publisher_data.append([publisher.text.strip(), number_of_titles.text.strip(), row[0].strip()])\n",
+    "finally:\n",
+    "    driver.quit()\n",
+    "\n",
+    "filename = \"./data/output_publishers_data.csv\"\n",
+    "with open(filename, \"w\", newline=\"\", encoding=\"utf-8\") as csvfile:\n",
+    "    csvwriter = csv.writer(csvfile, delimiter=\";\")\n",
+    "    csvwriter.writerow([\"name\", \"number_of_titles\", \"link\"])\n",
+    "    csvwriter.writerows(list_of_publisher_data)"
    ]
   }
  ],
