--- a/comics-project-data-collection.ipynb
+++ b/comics-project-data-collection.ipynb
@@ -37,6 +37,7 @@
    "outputs": [],
    "source": [
     "import csv\n",
+    "import time\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.edge.service import Service\n",
     "from selenium.webdriver.common.by import By\n",
@@ -49,11 +50,11 @@
     "driver = webdriver.Edge(service=service)\n",
     "\n",
     "try:\n",
-    "    nakladatelstvi = \"https://www.comicsdb.cz/prehled-nakladatelstvi/1/\"\n",
+    "    publisher = \"https://www.comicsdb.cz/prehled-nakladatelstvi/1/\"\n",
     "    list_of_links = []\n",
     "    for num in list(range(1,8)):\n",
-    "        driver.get(f'{nakladatelstvi}{num}')    \n",
-    "        driver.implicitly_wait(1)\n",
+    "        driver.get(f'{publisher}{num}')    \n",
+    "        time.sleep(1)\n",
     "        # wait for the element\n",
     "        element = WebDriverWait(driver, 5).until(\n",
     "            EC.presence_of_element_located((By.CSS_SELECTOR, \".card.text-center.p-2\")))\n",
@@ -74,7 +75,7 @@
    "id": "b53d8aba-2425-4e97-8e24-e55813a9d8a5",
    "metadata": {},
    "source": [
-    "### Visit each webpage of publishers from source .csv file and get number of titles and the list of titles."
+    "### Visit each webpage of a publisher from the source .csv file and get name, number of titles and link. Save the result to a .csv file"
    ]
   },
   {
@@ -85,6 +86,7 @@
    "outputs": [],
    "source": [
     "import csv\n",
+    "import time\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.edge.service import Service\n",
     "from selenium.webdriver.common.by import By\n",
@@ -101,7 +103,7 @@
     "        reader = csv.reader(file)\n",
     "        for row in reader:\n",
     "            driver.get(row[0])\n",
-    "            driver.implicitly_wait(1)\n",
+    "            time.sleep(1)\n",
     "            publisher = WebDriverWait(driver, 5).until(\n",
     "                EC.presence_of_element_located((By.CSS_SELECTOR, \".font-weight-semibold\")))\n",
     "            number_of_titles = WebDriverWait(driver, 5).until(\n",
@@ -116,6 +118,80 @@
     "    csvwriter.writerow([\"name\", \"number_of_titles\", \"link\"])\n",
     "    csvwriter.writerows(list_of_publisher_data)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b08f731e-0c5a-4e8d-82e4-97d955658210",
+   "metadata": {},
+   "source": [
+    "### Visit all titles overviews and save links to a .csv file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "f3a3667d-6249-4a5a-a72c-18006624f965",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "import time\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.edge.service import Service\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.support.ui import WebDriverWait\n",
+    "from selenium.webdriver.support import expected_conditions as EC\n",
+    "\n",
+    "\n",
+    "DRIVER_PATH = \"C:\\\\Users\\\\petr.musil\\\\Desktop\\\\python\\\\edgedriver\\\\msedgedriver.exe\"\n",
+    "service = Service(executable_path = DRIVER_PATH)\n",
+    "driver = webdriver.Edge(service=service)\n",
+    "\n",
+    "try:\n",
+    "    overview = \"https://www.comicsdb.cz/prehled-comicsu/6/\"\n",
+    "    list_of_links = []\n",
+    "    for num in list(range(1,106)):\n",
+    "        driver.get(f'{overview}{num}')    \n",
+    "        time.sleep(2)\n",
+    "        # wait for the element\n",
+    "        table_ = WebDriverWait(driver, 5).until(\n",
+    "            EC.presence_of_element_located((By.CSS_SELECTOR, \".table.table-hover.table-xs\")))\n",
+    "        links = driver.find_elements(by = By.CSS_SELECTOR, value = \".table-border-dashed a\")\n",
+    "        #links = links.find_elements(by = By.TAG_NAME, value = \"a\")\n",
+    "        for link in links:\n",
+    "            list_of_links.append([link.get_attribute(\"href\")])\n",
+    "finally:\n",
+    "    driver.quit()\n",
+    "\n",
+    "filename = \"./data/links_titles.csv\"\n",
+    "with open(filename, \"w\", newline=\"\", encoding=\"utf-8\") as csvfile:\n",
+    "    csvwriter = csv.writer(csvfile)\n",
+    "    csvwriter.writerows(list_of_links)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc9e2af4-5767-4e2c-ac8e-df8cad9ab14b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b19cd38-d40c-4656-8137-ea1473553b00",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b57e4330-de5a-4ea9-bec5-2fc401352ce2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
