Added year regex for filtering publishing year.

--- a/comics-project-data-collection.ipynb
+++ b/comics-project-data-collection.ipynb
@@ -124,7 +124,7 @@
    "id": "b08f731e-0c5a-4e8d-82e4-97d955658210",
    "metadata": {},
    "source": [
-    "### Visit all titles overviews and save links to a .csv file"
+    "### Visit all titles overviews and save links to all the titles to a .csv file"
    ]
   },
   {
@@ -170,28 +170,75 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a151a273-6f60-4abc-a133-4ad029491156",
+   "metadata": {},
+   "source": [
+    "### Visit all the titles details and get all the data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "fc9e2af4-5767-4e2c-ac8e-df8cad9ab14b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(9, 13), match='2023'>\n",
+      "2023\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "year_regex = r'\\d{4}'\n",
+    "text = \"prosinec 2023\"\n",
+    "\n",
+    "year_match = re.search(year_regex, text)\n",
+    "\n",
+    "if year_match:\n",
+    "    print(year_match.group(0))\n",
+    "else:\n",
+    "    print(\"not found\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "id": "2b19cd38-d40c-4656-8137-ea1473553b00",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b57e4330-de5a-4ea9-bec5-2fc401352ce2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 618 entries, 0 to 617\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column            Non-Null Count  Dtype \n",
+      "---  ------            --------------  ----- \n",
+      " 0   name              618 non-null    object\n",
+      " 1   number_of_titles  618 non-null    int64 \n",
+      " 2   link              618 non-null    object\n",
+      "dtypes: int64(1), object(2)\n",
+      "memory usage: 14.6+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "publishers = pd.read_csv(\"./data/output_publishers_data.csv\", delimiter=\";\")\n",
+    "publishers.info()\n",
+    "publishers = publishers[publishers[\"number_of_titles\"] > 100]\n",
+    "publishers.plot(kind = \"bar\", x = \"name\", y = \"number_of_titles\")\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
