--- a/comics-project-visualisation.ipynb
+++ b/comics-project-visualisation.ipynb
@@ -15,8 +15,8 @@
    "source": [
     "This project is non-profit, personal project for education purposes only.\n",
     "\n",
-    "1) Import the data from scraped the sqlite3 db\n",
-    "2) Explore the data\n",
+    "1) import the data from scraped the sqlite3 db\n",
+    "2) explore the data\n",
     "\n",
     "Thanks to the people from https://www.comicsdb.cz/ project."
    ]
