--- a/comics-project-data-collection.ipynb
+++ b/comics-project-data-collection.ipynb
@@ -13,7 +13,7 @@
    "id": "55d85183-1d73-4852-b4a0-72b53f03343b",
    "metadata": {},
    "source": [
-    "This project is non-profit, personal project for education purposes only.\n",
+    "This project is non-profit, personal project for education and presentation purposes only.\n",
     "\n",
     "1) scrape comics db data - save them into a file\n",
     "(huge amount of data scraped from nonprofit db - save it to the csv and avoid another round of scraping)\n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "ca838bad-239f-4eda-9c43-b4be9001c32c",
    "metadata": {},
    "outputs": [],
@@ -227,36 +227,15 @@
    "id": "e411459c-4c3e-4719-8664-5d1365d13d9c",
    "metadata": {},
    "source": [
-    "### Clean the data from csv files, restructure them and import to sqlite3 db"
+    "### Clean the data from .csv files, restructure them and import to sqlite3 db"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "id": "9c9daa2b-d57c-468f-8bf8-a53667bffa7a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 10453 entries, 0 to 10452\n",
-      "Data columns (total 7 columns):\n",
-      " #   Column          Non-Null Count  Dtype  \n",
-      "---  ------          --------------  -----  \n",
-      " 0   title           10453 non-null  object \n",
-      " 1   year            10453 non-null  int32  \n",
-      " 2   link_title      10453 non-null  object \n",
-      " 3   link_publisher  10391 non-null  object \n",
-      " 4   pages           10453 non-null  int32  \n",
-      " 5   price           9807 non-null   float64\n",
-      " 6   publisher_id    10453 non-null  int32  \n",
-      "dtypes: float64(1), int32(3), object(3)\n",
-      "memory usage: 530.8+ KB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import sqlite3\n",
@@ -266,16 +245,16 @@
     "publishers = pd.read_csv(\"./data/output_publishers_data.csv\", delimiter=\";\")\n",
     "\n",
     "titles_origin = titles.copy()\n",
-    "titles = titles[titles[\"link_publisher\"] == \"/nakladatelstvi/1/crew\"]\n",
-    "titles[\"year\"] = titles[\"year\"].astype(int)\n",
-    "mean_pages = titles[\"pages\"].mean()\n",
-    "titles[\"pages\"] = titles[\"pages\"].fillna(mean_pages).astype(int)\n",
-    "titles[\"price\"] = titles[\"price\"].str.replace(\" Kč\", \"\").astype(int)\n",
+    "\n",
     "# if there is no year fill special value 0\n",
     "titles_origin[\"year\"] = titles_origin[\"year\"].fillna(0)\n",
     "titles_origin[\"year\"] = titles_origin[\"year\"].astype(int)\n",
+    "\n",
+    "# if no pages, fill mean - might be other choices\n",
     "mean_pages = titles_origin[\"pages\"].mean()\n",
     "titles_origin[\"pages\"] = titles_origin[\"pages\"].fillna(mean_pages).astype(int)\n",
+    "\n",
+    "# if no price, fill 0, clean and change string to a float\n",
     "titles_origin[\"price\"] = titles_origin[\"price\"].fillna(0)\n",
     "titles_origin[\"price\"] = titles_origin[\"price\"].str.replace(\" Kč\", \"\")\n",
     "titles_origin[\"price\"] = titles_origin[\"price\"].str.replace(\" h\", \"\")\n",
@@ -284,7 +263,7 @@
     "titles_origin[\"price\"] = titles_origin[\"price\"].str.replace(\" Lei\", \"\")\n",
     "titles_origin[\"price\"] = titles_origin[\"price\"].str.strip().astype(float)\n",
     "\n",
-    "# Save some space - get the same part of url as in the titles csv file.\n",
+    "# save some space - get the same part of url as in the titles csv file.\n",
     "publishers[\"link\"] = publishers[\"link\"].apply(lambda x: urlparse(x).path)\n",
     "publishers.rename(columns = {\"index\": \"publisher_id\"}, inplace = True)\n",
     "\n",
@@ -327,7 +306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
