Corrections in markups.

--- a/comics-project-data-collection.ipynb
+++ b/comics-project-data-collection.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "2) create sqlite3 db (separate comics.sql script) and import the gathered data\n",
     "\n",
-    "Thanks to the people from https://www.comicsdb.cz/ project."
+    "Thanks to the people from the https://www.comicsdb.cz/ project."
    ]
   },
   {
@@ -133,7 +133,7 @@
    "id": "b08f731e-0c5a-4e8d-82e4-97d955658210",
    "metadata": {},
    "source": [
-    "### Visit all titles overviews and save links to all the titles to a .csv file"
+    "### Visit all the titles´ overviews and save the links to a .csv file"
    ]
   },
   {
@@ -227,7 +227,7 @@
    "id": "e411459c-4c3e-4719-8664-5d1365d13d9c",
    "metadata": {},
    "source": [
-    "### Clean the data from .csv files, restructure them and import to sqlite3 db"
+    "### Clean the data from .csv files, restructure them and import to a sqlite3 db"
    ]
   },
   {
