Text correctisons - conclusion etc.

--- a/comics-project-data-collection.ipynb
+++ b/comics-project-data-collection.ipynb
@@ -13,7 +13,7 @@
    "id": "55d85183-1d73-4852-b4a0-72b53f03343b",
    "metadata": {},
    "source": [
-    "This project is non-profit, personal project for education and presentation purposes only.\n",
+    "This project is a non-profit, personal project for the educational and presentation purposes only.\n",
     "\n",
     "1) scrape comics db data - save them into a file\n",
     "(huge amount of data scraped from nonprofit db - save it to the csv and avoid another round of scraping)\n",
